<resources>
    <string name="app_name">Node Maps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selecionar_cidade">Selecionar Cidade</string>
    <string name="criar_node">+ Criar Node</string>
    <string name="criar_nova_cidade">+ Criar Nova Cidade</string>
    <string name="node">Node</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Número</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="status">Status:</string>
    <string name="endereco_">Endereço:</string>
    <string name="n">N:</string>
    <string name="bairro__">Bairro:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_main_deslogar">Deslogar</string>
    <string name="title_activity_check_list_node">CheckListNodeActivity</string>
    <string name="large_text"></string>

    <string name="title_activity_atividade">AtividadeActivity</string>
    <string name="node_">NODE:</string>
    <string name="meu_Node">DIAB</string>
    <string name="oc">OC:</string>
    <string name="meu_OC">10560</string>
    <string name="cidade_">Cidade:</string>
    <string name="meu_Cidade">Diadema</string>
    <string name="bairro_">Bairro:</string>
    <string name="meu_Bairro">Campanário</string>
    <string name="end">End:</string>
    <string name="meu_Endereco">Av Brasil</string>
    <string name="n_">N.</string>
    <string name="meu_Numero">589</string>
    <string name="todo">TODO</string>
    <string name="data_inicio">Data Início</string>
    <string name="hora_inicio">Hora Início</string>
    <string name="data_hora_Cabecalho">DATA / HORA</string>
    <string name="data_termino">Data Termino</string>
    <string name="hora_termino">Hora Termino</string>
    <string name="informaces_do_node">INFORMAÇÕES DO NODE</string>
    <string name="fabricante">Fabricante</string>
    <string name="segmentacao_node">SEGMENTAÇÃO NODE</string>
    <string name="_1x1">1X1</string>
    <string name="_1x2">1X2</string>
    <string name="_2x2">2X2</string>
    <string name="_2x4">2X4</string>
    <string name="Rx2">RX2</string>
    <string name="posicionamento_node">POSICIONAMENTO NODE</string>
    <string name="ok">OK</string>
    <string name="pendente">PENDENTE</string>
    <string name="inspecao_optica_rf_entrada">INSPEÇÃO OPTICA / RF - ENTRADA</string>
    <string name="pot_otica_vdc">Pot.Ótica (VDC)</string>
    <string name="_1x4">1X4</string>
    <string name="_4x4">4X4</string>
    <string name="Rx1">RX1</string>
    <string name="pad_rx">PAD RX</string>
    <string name="Rx3">RX3</string>
    <string name="Rx4">RX4</string>
    <string name="pad">PAD</string>




</resources>
