<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack_Tranparente1"
    android:gravity="center"
    tools:context=".activity.InventarioCadastroActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardElevation="4dp"
        app:contentPadding="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="246dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar_CadastroNode"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:theme="@android:style/Widget.Holo.Light.ProgressBar" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                app:boxBackgroundMode="outline"
                app:counterEnabled="true"
                app:counterMaxLength="5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtxt_CadastroNode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/node"
                    android:inputType="textPersonName"
                    android:maxLength="5"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtxt_CadastroCidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cidade"
                    android:inputType="textPersonName"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtxt_CadastroBairro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bairro"
                    android:inputType="textPersonName"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtxt_CadastroEndereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/endereco"
                    android:inputType="textPersonName"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxBackgroundMode="outline"
                app:passwordToggleEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtxt_CadastroNumero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numero"
                    android:inputType="number"
                    android:maxLength="5"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_ID_Inativo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorVermelho1"
                    android:onClick="btFecharTela"
                    android:text="@string/cancelar"
                    android:textColor="@color/colorBranco_1" />

                <Button
                    android:id="@+id/bt_Salvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:backgroundTint="@color/colorPrimary"
                    android:onClick="salvarNode"
                    android:text="@string/salvar"
                    android:textColor="@color/colorBranco_1" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>