<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_Branco">

        <ImageView
            android:id="@+id/_IMAGEM_DADOS_NODE"
            android:layout_width="360dp"
            android:layout_height="136dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/color_Branco" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/node_"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textoNode"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/meu_Node"
            android:textColor="@color/colorCinzaNode"
            android:textSize="@dimen/textoNode"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/oc"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textoNode"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.73"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/meu_OC"
            android:textColor="@color/colorCinzaNode"
            android:textSize="@dimen/textoNode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cidade_"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textoNode"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/meu_Cidade"
            android:textColor="@color/colorCinzaNode"
            android:textSize="@dimen/textoNode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bairro_"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textoNode"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/meu_Bairro"
            android:textColor="@color/colorCinzaNode"
            android:textSize="@dimen/textoNode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/end"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textoNode"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/meu_Endereco"
            android:textColor="@color/colorCinzaNode"
            android:textSize="@dimen/textoNode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textoNode"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView15"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/meu_Numero"
            android:textColor="@color/colorCinzaNode"
            android:textSize="@dimen/textoNode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toTopOf="@+id/textView14" />

        <View
            android:id="@+id/divider"
            android:layout_width="344dp"
            android:layout_height="1dp"
            android:background="@color/colorCinzaAzul_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <View
            android:id="@+id/divider2"
            android:layout_width="344dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorCinzaAzul_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <View
            android:id="@+id/divider3"
            android:layout_width="344dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorCinzaAzul_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <View
            android:id="@+id/divider4"
            android:layout_width="344dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorCinzaAzul_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <View
            android:id="@+id/divider5"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/_IMAGEM_DADOS_NODE"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/_IMG_CHECKLIST_NODE"
            android:layout_width="0dp"
            android:layout_height="700dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider5"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider5">

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="180dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_DATA_INICIO"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_Data_Inicio_Node"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Data Início"
                android:textColor="@color/colorCinzaNode" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/imgBtn_Data_Inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_DATA_INICIO"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout_DATA_INICIO"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout_DATA_INICIO"
            app:srcCompat="@drawable/ic_data_cinzablack_24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_HORA_INICIO"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout_DATA_INICIO"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout_DATA_INICIO">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_Hora_Inicio_Node"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Hora Início"
                android:textColor="@color/colorCinzaNode" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/imgBtn_Hora_Inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_HORA_INICIO"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout_HORA_INICIO"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout_HORA_INICIO"
            app:srcCompat="@drawable/ic_hora_cinzablack_24dp"
            android:contentDescription="@string/todo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_DATA_TERMINO"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toEndOf="@+id/imgBtn_Data_Inicio"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout_DATA_INICIO"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_DATA_INICIO">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_Data_Termino_Node"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Data Termino"
                android:textColor="@color/colorCinzaNode" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/imgBtn_Data_Termino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_DATA_TERMINO"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout_DATA_TERMINO"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout_DATA_TERMINO"
            app:srcCompat="@drawable/ic_data_cinzablack_24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_HORA_TERMINO"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toEndOf="@+id/imgBtn_Hora_Inicio"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout_HORA_INICIO"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_HORA_INICIO">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_Hora_Termino_Node"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Hora Termino"
                android:textColor="@color/colorCinzaNode" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/imgBtn_Hora_Termino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_HORA_TERMINO"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout_HORA_TERMINO"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout_HORA_TERMINO"
            app:srcCompat="@drawable/ic_hora_cinzablack_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>